Modificación general y estructura de portal
- Adición modulo factura
- Creación portal de gestión
- Creación modulo administrativo
- Modificaciones varias en los
   modulos, botones de "Regresar" y
   "Salir"
- Elminación de botones virtual y
   fisico dentro del ambiente login

--- a/crud/agregarLibro.html
+++ b/crud/agregarLibro.html
@@ -25,10 +25,8 @@
                 </a>
 
                 <nav class="navegacion">
-                    <a href="index.html" class="navegacion__enlace">Home</a>
-                    <a href="virtual.html" class="navegacion__enlace">Virtual</a>
-                    <a href="fisico.html" class="navegacion__enlace">Fisico</a>
-                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                    <a href="../modulos.html" class="navegacion__enlace">Regresar</a>
+                    <a href="../index.html" class="navegacion__enlace">Salir</a>
 
                 </nav>
             </div>
