--- a/login2.html
+++ b/login2.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Aqui va login</h1>
+    <head></head>
     <a href="modulos.html" class="boton boton--primario">Autenticarse</a>
 
 </body>
