--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <nav class="navegacion">
                     <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
                     <a href="virtual.html" class="navegacion__enlace">Catalogo Virtual</a>
-                    <a href="contacto.html" class="navegacion__enlace">Catalogo Fisico</a>
-                    <a href="contacto.html" class="navegacion__enlace">Carrito</a>
+                    <a href="fisico.html" class="navegacion__enlace">Catalogo Fisico</a>
+                    <a href="index.html" class="navegacion__enlace">Carrito</a>
                     <a href="login2.html" class="navegacion__enlace">Login</a>
 
 
@@ -87,7 +87,7 @@
                         <p style="font-weight: bold;">4. FESTÍN DE CUERVOS</p>
                         <p style="font-weight: bold;">5. DANZA DE DRAGONES</p>                        
                         <p>"Una de las mejores series de la historia de la fantasía. "--Los Angeles Times</p>
-                    <a href="virtual.html" class="boton boton--primario">Añadir al carrito</a>
+                    <a href="index.html" class="boton boton--primario">Añadir al carrito</a>
                 </div>
             </article>
 
@@ -102,7 +102,7 @@
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Barnes & Noble Leatherbound Classic Collection</h4>
                     <p>Sumérgete en la majestuosidad de la "Barnes & Noble Leatherbound Classic Collection". Una sinfonía de la literatura atemporal cuidadosamente encuadernada en cuero, esta colección es un tributo a la elegancia y la erudición. Cada libro es más que una lectura; es una obra de arte en sí misma. Desde los giros oscuros de Edgar Allan Poe hasta las aventuras deslumbrantes de Julio Verne, cada tomo transporta a un mundo de maravillas literarias. Toca las páginas que respiran historia y sostén en tus manos la esencia misma de los grandes escritores. La "Barnes & Noble Leatherbound Classic Collection" es mucho más que una adición a tu estante: es un portal hacia el pasado que define nuestro presente literario.</p>
-                    <a href="entrada.html" class="boton boton--primario">Añadir al carrito</a>
+                    <a href="index.html" class="boton boton--primario">Añadir al carrito</a>
                 </div>
             </article>
         </main>
