--- a/login2.html
+++ b/login2.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Aqui va login</h1>
     <head></head>
-    <a href="modulos.html" class="boton boton--primario">Autenticarse</a>
+    <a href="portal.html" class="boton boton--primario">Autenticarse</a>
 
 </body>
 </html>
