--- a/crud/agregarEmpleado.html
+++ b/crud/agregarEmpleado.html
@@ -57,18 +57,19 @@
                         </div>
                         <div class="modal-body">
                             <h6>Nombre:</h6>
-                            <input type="text" name="cable-mac" style="width: 75px;"><br><br>
-                            <h6>Apellido</h6><br>                            
-                            <input type="text" name="por_us1" style="width: 100px;">                   
+                            <input type="text" name="cable-mac" style="width: 150px;"><br><br>
+                            <h6>Apellido</h6>                           
+                            <input type="text" name="por_us1" style="width: 150px;"><br>             
                             
-                            <h6>ID</h6><br>
-                            <input type="text" name="feq_us1" style="width: 100px;">
+                            <br><h6>ID</h6>
+                            <input type="text" name="feq_us1" style="width: 150px;"><br>
                             <br>
-                            <h6>Telefono</h6><br>
-                            <input type="text" name="feq_us1" style="width: 100px;">
+                            
+                            <h6>Telefono</h6>
+                            <input type="text" name="feq_us1" style="width: 100px;"><br>
                             <br>
                             <h6>Direccion</h6>
-                            <input type="text" name="cable-mac" style="width: 75px;"><br><br>
+                            <input type="text" name="cable-mac" style="width: 350px;"><br><br>
                             <h6>Sexo</h6>
                             <select name="con_us1" class="form-select form-select-sm mb-3" aria-label=".form-select-sm example" style="width: 75px;">
                                 <option selected=""></option>
