--- a/crud/agregarProveedor.html
+++ b/crud/agregarProveedor.html
@@ -56,7 +56,7 @@
                         </div>
                         <div class="modal-body">
                             <h6>Nombre:</h6>
-                            <input type="text" name="cable-mac" style="width: 75px;"><br><br>
+                            <input type="text" name="cable-mac" style="width: 75px;"><br>
                             
                             <h6>Email</h6><br>                            
                             <input type="text" name="por_us1" style="width: 100px;"> 
