--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="virtual.html" class="navegacion__enlace">Catalogo Virtual</a>
                     <a href="fisico.html" class="navegacion__enlace">Catalogo Fisico</a>
                     <a href="index.html" class="navegacion__enlace">Carrito</a>
-                    <a href="login2.html" class="navegacion__enlace">Login</a>
+                    <a href="login.html" class="navegacion__enlace">Login</a>
 
 
                 </nav>
