--- a/crud/agregarfactura.html
+++ b/crud/agregarfactura.html
@@ -26,8 +26,7 @@
 
                 <nav class="navegacion">
                     <a href="../modulos_administrativos.html" class="navegacion__enlace">Regresar</a>
-                    <a href="../index.html" class="navegacion__enlace">Salir</a>
-                   
+                    <a href="../index.html" class="navegacion__enlace">Salir</a>           
 
                 </nav>
             </div>
@@ -37,7 +36,7 @@
             <h2 class="no-margin">Descubre el Mundo Entre Páginas</h2>
             <p class="no-margin">Explorando Ideas, Creando Aventuras</p>
         </div>
-        </div>>
+        </div>
     </header>
 
     <main class="contenedor">
