--- a/modulos_administrativos.html
+++ b/modulos_administrativos.html
@@ -60,6 +60,44 @@
             </div> 
         </div> 
 
+          <div class="curso">
+            <div class="curso__imagen">
+                <img src="img/libro10.jpeg" alt="Imagen del curso">
+            </div>
+            <div class="curso__informacion">
+                <h4 class="no-margin">Modulo Ventas</h4>
+                <p class="curso__label"> 
+                    <span class="curso__info">Modulo para gestion de Ventas</span>
+                </p>
+                <p class="curso__label"> 
+                    <span class="curso__info"></span>
+                </p>
+                <p class="curso__descripcion">
+                </p>
+                <a href="/nuevos_modulos/modulo_Venta.html" class="boton boton--primario">Ingresar</a>
+
+            </div> 
+        </div> 
+
+        <div class="curso">
+            <div class="curso__imagen">
+                <img src="img/libro9.jpg" alt="Imagen del curso">
+            </div>
+            <div class="curso__informacion">
+                <h4 class="no-margin">Modulo de Recursos Humanos</h4>
+                <p class="curso__label"> 
+                    <span class="curso__info">Modulo para gestion de Recursos Humanos </span>
+                </p>
+                <p class="curso__label"> 
+                    <span class="curso__info"></span>
+                </p>
+                <p class="curso__descripcion">
+                </p>
+                <a href="./nuevos_modulos/modulo_RH.html" class="boton boton--primario">Ingresar</a>
+
+            </div> 
+        </div> 
+
         <!-- <div class="curso">
             <div class="curso__imagen">
                 <img src="img/empleado.jpg" alt="Imagen del curso">
