--- a/modulos.html
+++ b/modulos.html
@@ -97,6 +97,25 @@
             </div> 
         </div> 
 
+
+        <div class="curso">
+            <div class="curso__imagen">
+                <img src="img/libro11.jpg" alt="Imagen del curso">
+            </div>
+            <div class="curso__informacion">
+                <h4 class="no-margin">Gestión de Bodega</h4>
+                <p class="curso__label"> 
+                    <span class="curso__info">Modulo para gestión del stock</span>
+                </p>
+                <p class="curso__label"> 
+                    <span class="curso__info"></span>
+                </p>
+                <p class="curso__descripcion">
+                </p>
+                <a href="./nuevos_modulos/modulo_Bodega.html" class="boton boton--primario">Añadir</a>
+            </div> 
+        </div> 
+        
         
     </main>
 
