--- a/portal.html
+++ b/portal.html
@@ -87,6 +87,10 @@
                 <a class="logo" href="index.html">
                     <h1 class="logo__nombre no-margin centrar-texto">ElRincon<span class="logo__bold">DeLasLetras</span></h1>
                 </a>
+                  <nav class="navegacion">
+                <a class="logo"
+                
+                href="Manual.html">Manual de Usuario</a>
 
                 <nav class="navegacion">
                 
