--- a/Manual.html
+++ b/Manual.html
@@ -48,7 +48,7 @@
         <h3>Acceso al Sistema</h3>
 
         <p>Acceso al Sistema
-            El ingreso al SIREI se realizará desde la siguiente dirección electrónica
+            El ingreso se realizará desde la siguiente dirección electrónica
             http://ElRincondelasletras/login.html en la cual, una vez que usted se autentifique como usuario
             autorizado (empleado, administrador), podrá ingresar al sistema.
             A continuación se muestra la página de inicio del sistema:
